<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/tvCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblMail" />

        <EditText
            android:id="@+id/edtMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:text="E-mail" />

        <TextView
            android:id="@+id/tvCuit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblCuit" />

        <EditText
            android:id="@+id/edtCuit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="Number" />

        <TextView
            android:id="@+id/tvMoneda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblMoneda" />

        <RadioGroup
            android:id="@+id/optMoneda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/optDolar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblMonedaDolar" />

            <RadioButton
                android:id="@+id/optPesos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblMonedaPesos" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvMonto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblMonto" />

        <EditText
            android:id="@+id/edtMonto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="Number" />

        <TextView
            android:id="@+id/tvDias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblDias" />

        <SeekBar
            android:id="@+id/seekDias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="180"
            android:min="10" />

        <TextView
            android:id="@+id/tvDiasSeleccionados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>

        <TextView
            android:id="@+id/tvIntereses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/tvAvisarVencimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblAvisarVencimiento" />

            <Switch
                android:id="@+id/swAvisarVencimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <ToggleButton
            android:id="@+id/togAccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/lblAccionVencimientoAcreditar"
            android:textOn="@string/lblAccionVencimientoRenovar"
            android:enabled="false"/>

        <CheckBox
            android:id="@+id/chkAceptoTerminos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblAceptoTerminos" />

        <Button
            android:id="@+id/btnHacerPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblHacerPF"
            android:visibility="visible" />

        <TextView
            android:id="@+id/edtMensajes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="6" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>